change media print and solve firefox print bug on 2 columns

--- a/index.html
+++ b/index.html
@@ -6,17 +6,19 @@
     <style>
         img {
             height: 325px;
-            width: 230px;
+            width: 225px;
         }
 
         textarea{
             width: 200px;
             height: 200px;
         }
-    </style>
 
-    <style media="print">
-        .no-print { display: none; }
+        @media print {
+            .no-print {
+                display: none;
+            }
+        }
     </style>
 </head>
 <body>
